kubernetes/charts/prometheus/patches/istio.yaml
#Gateway
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: prometheus-gw
  namespace: istio-system
spec:
  servers:
    - hosts:
        - prometheus.ops.cluster.yanychoi.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: prometheus-tls
        mode: SIMPLE
    - hosts:
        - prometheus.ops.cluster.yanychoi.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: prometheus
spec:
  hosts:
  - prometheus.ops.cluster.yanychoi.com
  gateways:
  - istio-system/prometheus-gw
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9000
        host: prometheus-server
